adds async geo- and weather API calls

--- a/website/index.html
+++ b/website/index.html
@@ -12,8 +12,8 @@
         </h1>
         <div class ="city">
             <label for="cityName">Name of City </label>
-            <input type="text" id="cityName" placeholder="City name you want to get the wheather from">
-            <button id="fetchWheatherButton" type = "submit"> fetch wheather </button>
+            <input type="text" id="cityName" placeholder="City name you want to get the weather from">
+            <button id="fetchWeatherButton" type = "submit"> fetch weather </button>
         </div>
 
         <div class ="entry">
